--- a/app/views/adviceareas/index.html.erb
+++ b/app/views/adviceareas/index.html.erb
@@ -11,10 +11,10 @@
     </tr>
   </thead>
 
-<%= form_tag advicearea_path(@advicearea), method: :get do %>
+<%=# form_tag advicearea_path(@advicearea), method: :get do %>
   <p>
-    <%= text_field_tag :query, params[:query] %>
-    <%= submit_tag "Search", name: nil %>
+    <%=# text_field_tag :query, params[:query] %>
+    <%=# submit_tag "Search", name: nil %>
   </p>
 <% end %>
 
