--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,8 @@
 <div class="center hero-unit">
   <h1>AdviceShare</h1>
 	<% if user_signed_in? %>
-          # do something
+          
+		<%= render 'static_pages/search' %>
      <% else %>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
