--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -18,6 +18,7 @@
       <tr>
         <td><%= section.title %></td>
         <td><%= section.body %></td>
+        <td><%= section.section_number %></td>
         <td><%= section.user_id %></td>
         <td><%= section.advicearea_id %></td>
         <td><%= link_to 'Show', section %></td>
