--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,8 @@
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <div class="center hero-unit">
   <h1>AdviceShare</h1>
-	<% if user_signed_in? %>
-          
+	<% if user_signed_in? %>  
 		<%= render 'static_pages/search' %>
      <% else %>
        <p>
