--- a/app/views/adviceareas/index.html.erb
+++ b/app/views/adviceareas/index.html.erb
@@ -1,3 +1,6 @@
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <h1>Listing adviceareas</h1>
 
 <table>
@@ -13,17 +16,19 @@
 
 
 
-  <tbody>
-    <% @adviceareas.each do |advicearea| %>
-      <tr>
-        <td><%= advicearea.name %></td>
-        <td><%= advicearea.description %></td>
-        <td><%= link_to 'Show', advicearea %></td>
-        <td><%= link_to 'Edit', edit_advicearea_path(advicearea) %></td>
-        <td><%= link_to 'Destroy', advicearea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+<div class="container">
+ <% @adviceareas.each do |advicearea| %>
+  <div class="row">
+    <div class="col-md-4"><%= advicearea.name %></div>
+    <div class="col-md-4"><%= advicearea.description %></div>
+    <div class="col-md-4">
+      <%= link_to 'Show', advicearea %>
+      <%= link_to 'Edit', edit_advicearea_path(advicearea) %>
+      <%= link_to 'Destroy', advicearea, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+  </div>
+ <% end %>
+</div>
 </table>
 
 <br>
