--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_area :body %>
   </div>
   <div class="field">
+    <%= f.label :section_number %><br>
+    <%= f.number_field :section_number %>
+  </div>
+  <div class="field">
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
