--- a/app/views/adviceareas/index.html.erb
+++ b/app/views/adviceareas/index.html.erb
@@ -1,36 +1,46 @@
-
 <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 <h1>Listing adviceareas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-
-
-<div class="container">
- <% @adviceareas.each do |advicearea| %>
-  <div class="row">
-    <div class="col-md-4"><%= advicearea.name %></div>
-    <div class="col-md-4"><%= advicearea.description %></div>
-    <div class="col-md-4">
-      <%= link_to 'Show', advicearea %>
-      <%= link_to 'Edit', edit_advicearea_path(advicearea) %>
-      <%= link_to 'Destroy', advicearea, method: :delete, data: { confirm: 'Are you sure?' } %>
-    </div>
-  </div>
- <% end %>
+<div class="AdviceAreascontainer">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th style="width: 0%"></th>
+        <th style="width: 20%">Advice Area</th>
+        <th style="width: 40%">Description</th>
+        <th style="width: 40%">Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <% @adviceareas.each do |advicearea| %>
+          <td></td>  
+          <td>
+            <%= advicearea.name %>
+            <br>
+            <br>
+          </td>
+          <td>
+            <%= advicearea.description %>
+            <br>
+            <br>
+          </td>
+          <td>
+            <% if current_user.try(:admin?) %>
+              <button type="button" class="btn"><%= link_to 'Show', advicearea, class: 'ShowAdvice' %></button>
+              <button type="button" class="btn"><%= link_to 'Edit', edit_advicearea_path(advicearea) %></button>
+              <button type="button" class="btn"><%= link_to 'Destroy', advicearea, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+            <% end %>
+          </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-</table>
-
 <br>
 
+<% if current_user.try(:admin?) %> 
 <%= link_to 'New Advicearea', new_advicearea_path %>
+<% end %>
+
+
