--- a/app/views/adviceareas/show.html.erb
+++ b/app/views/adviceareas/show.html.erb
@@ -12,7 +12,7 @@
 
 
 <ul class="advicearea_sections">
-  <%= render @advicearea.sections %>
+  <%= render @advicearea.sections.order('section_number ASC') %>
 </ul> 
 
 
