--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,19 +3,24 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true %></div>
+<form class="form-horizontal">
+  <div class="control-group">
+    <%= f.text_field :name, :autofocus => true, :placeholder => 'Name' %>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="control-group">
+    <%= f.email_field :email, :placeholder => 'Email' %>
+  </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div class="control-group">
+    <%= f.password_field :password, :placeholder => 'Password' %>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+  <div class="control-group">
+    <%= f.password_field :password_confirmation, :placeholder => 'Password_confirmation' %>
+  </div>
+  
+  <button type="submit" class="btn">Sign up!</button>
 <% end %>
 
 <%= render "devise/shared/links" %>
