--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :title, :placeholder => 'Title' %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :body, :placeholder => 'Content of section' %><br>
     <%= f.text_area :body %>
   </div>
   <div class="field">
