--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,16 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 <div class="center hero-unit">
+<div class="jumbotron">
   <h1>AdviceShare</h1>
 	<% if user_signed_in? %>  
 		<%= render 'static_pages/search' %>
-     <% else %>
-       <p>
-         <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-       </p>
+    <% else %>
+   <p>
+     <%= link_to "Sign up", new_user_registration_path, 
+     class: "btn btn-large btn-primary" %>
+     <br>
+     <br>
+     <!--<%= link_to "Log in", new_user_session_path, class: "btn btn-large" %> -->
+   </p>
   <% end %>
+</div>  
 </div>
