--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'About') %>
-<h1>About</h1>
-<p>
-  This is the home page for
-  <a href="http://AdviceShare.co/">AdviceShare</a>
-</p>
 
-
+<h2 class="text-center">An easier way to get the advice you're looking for.</h2>
+<br>
+<br>
+<br>
+<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
