--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -1,6 +1,6 @@
 <ul>
  <button type="button" class="btn">
-	<%= link_to section.title, advicearea_section_path(section.advicearea, section), class: 'ShowSection' %>
+	<%= link_to section.title, advicearea_section_path(section.advicearea, section), class: 'NoUnderlineForLink' %>
  </button>
 </ul>
 <br>
