--- a/app/views/static_pages/howItWorks.html.erb
+++ b/app/views/static_pages/howItWorks.html.erb
@@ -1,46 +1,29 @@
 <% provide(:title, 'How it Works') %>
-<h1>How it Works</h1>
-<p>
-  This is the home page for
-  <a href="http://AdviceShare.co/">AdviceShare</a>
-</p>
 
-
+<h1 class="text-center">How it Works</h1>
+<br>
+<br>
 
 <div class="row">
-  <div class="span4" class="text-center">
-  	<img src="..." class="img-rounded">
-  	<p class="text-center">Center aligned text.</p>
+  <div class="span4">
+  	<div class="parent">
+      <div class="child">
+          <img src="http://comps.canstockphoto.com/can-stock-photo_csp2525879.jpg" />
+      </div>
+    </div>
   </div>
   <div class="span4">
-  	<img src="..." class="img-rounded">
+  	<div class="parent">
+      <div class="child">
+          <img src="http://comps.canstockphoto.com/can-stock-photo_csp2525879.jpg" />
+      </div>
+    </div>
   </div>
   <div class="span4">
-  	<img src="..." class="img-rounded">
+  	<div class="parent">
+      <div class="child">
+          <img src="http://comps.canstockphoto.com/can-stock-photo_csp2525879.jpg" />
+      </div>
+    </div>
   </div>
 </div>
-
-
-
-<form class="form-horizontal">
-  <div class="control-group">
-    <label class="control-label" for="inputEmail">Email</label>
-    <div class="controls">
-      <input type="text" id="inputEmail" placeholder="Email">
-    </div>
-  </div>
-  <div class="control-group">
-    <label class="control-label" for="inputPassword">Password</label>
-    <div class="controls">
-      <input type="password" id="inputPassword" placeholder="Password">
-    </div>
-  </div>
-  <div class="control-group">
-    <div class="controls">
-      <label class="checkbox">
-        <input type="checkbox"> Remember me
-      </label>
-      <button type="submit" class="btn">Sign in</button>
-    </div>
-  </div>
-</form>
