--- a/app/views/static_pages/landingpage1.html.erb
+++ b/app/views/static_pages/landingpage1.html.erb
@@ -1,19 +1,49 @@
+<div class="spacefortopoflandingpage">
+<div>
+
 <div class="parentLanding">
     <div class="childLanding">
         <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare-big-green.png" />
 	</div>
 </div>
 
-<h2 class="text-center">An easier way to get the advice you're looking for.</h2>
-<br>
-<br>
-<br>
-<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
+<div class="row">
+  <div class="span6">
+  	<div class="parent">
+      <div class="child">
+          
+		<h1 class="text-center">An easier way to get the advice you're looking for.</h1>
+		<br>
+		<br>
+		<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
 
+      </div>
+    </div>
+  </div>
+
+  <div class="span6">
+  	<div class="parent">
+      <div class="child">
+
+		<h1 class="text-center">An easier way to get the advice you're looking for.</h1>
+		<br>
+		<br>
+		<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
+
+      </div>
+    </div>
+  </div>
+  
+</div>
 
 <div class="buttonLanding">
     <div class="childLanding">
         <button class="btn btn-large btn-primary" type="button"><%= link_to 'Sign Up for Early Access', "http://www.adviceshare.co/#sign-up", class: 'NoUnderlineForLink', id: 'whiteText'  %></button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <small>© 2013 AdviceShare. All rights reserved.</small>
 	</div>
 </div>
 
