--- a/app/views/static_pages/pricingpage.html.erb
+++ b/app/views/static_pages/pricingpage.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Pricing') %>
-<div class="spacefortopofpage">
-</div>
+<%= render 'layouts/emptyspaceattopofpage' %>
 
 <h1 class="text-center">Pricing</h1>
 <br>
