--- a/app/views/static_pages/landingpage1.html.erb
+++ b/app/views/static_pages/landingpage1.html.erb
@@ -1,3 +1,4 @@
+
 <div class="spacefortopoflandingpage">
 <div>
 
@@ -14,7 +15,6 @@
           
 		<h1 class="text-center">An easier way to get the advice you're looking for.</h1>
 		<br>
-		<br>
 		<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
 
       </div>
@@ -25,10 +25,19 @@
   	<div class="parent">
       <div class="child">
 
-		<h1 class="text-center">An easier way to get the advice you're looking for.</h1>
+		<h1 class="text-center">How it Works</h1>
 		<br>
 		<br>
-		<h3 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h3>
+		<h4 class="text-left">
+			1. You tell us what type of advice you're looking for.
+			<br>
+			<br>
+			2. We'll provide you with insights with those who have been in your shoes, and want to help.
+			<br>
+			<br>
+			3. You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.
+
+		</h4>
 
       </div>
     </div>
