--- a/app/assets/stylesheets/signups.css.scss
+++ b/app/assets/stylesheets/signups.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the signups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body, h1, h2, h3, h4, h5, h6, small {
+  font-family: Lucida, "Lucida Sans Unicode", "Lucida Grande", Lucida, serif;
+color: white;
+}
+
+.changesmallfont{
+color: white;
+}
