--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -1,4 +1,19 @@
-<div class="container">
-  <h1>Thank you for your message.</h1>
-  <p> We'll get back to you soon. </p>
+<div class="spacefortopoflandingpage">
+<div>
+<div class="parentLanding">
+    <div class="childLanding">
+    	<br>
+    	<br>
+    	<br>
+    	<br>   
+        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-lowercase-white.png" />
+        <br>
+        <br>
+        <br>
+   		<br>
+        <h1 class="text-center">Thank you! <br><br> 
+        	We'll email you when access becomes available!</h1>
+        <br>
+   
+	</div>
 </div>
