Update Landing Page Graphics

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,7 +92,7 @@ html,body {
       }
 
       .moveleft{
-        margin-left: -15px;
+        margin-left: -20px;
       }
 
   /* Landing Page - for How it works & Signup box */
@@ -114,7 +114,7 @@ html,body {
       }
 
       .explainergraphics img {
-            width:5%;
+            width:10%;
             height: 50px;
         }
        
@@ -123,7 +123,11 @@ html,body {
       } 
 
         .pushpicturedown {
-          margin-top: 18px;
+          margin-top: 5px;
+        }
+
+        .pushpicturedownmore {
+          margin-top: 17px;
         }
 
         .space2and3{
