--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -31,20 +31,17 @@
 		<h4 class="text-left">
 
 		<div class="clearfix content-heading explainergraphics">
-			<h1 class="pull-left withrightmargin">1</h1>
-          
+          <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png"/>
           <h4 class="getridofspaceatbottom pulltextup">Tell us what advice you need.</h4>
           <small class="changesmallfont">You tell us what type of advice you're looking for.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics space2and3">
-      		<h1 class="pull-left withrightmargin pushpicturedown">2</h1>
-          
+          	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(2).png"/>
           <h4 class="getridofspaceatbottom">We'll connect you. / We'll provide advice.</h4>
           <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics">
-      		<h1 class="pull-left withrightmargin pushpicturedown">3</h1>
-          
+          <img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(3).png"/>
           <h4 class="getridofspaceatbottom">Save Time. Avoid the hassle.</h4>
           <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.</small>
       	</div>
@@ -56,7 +53,7 @@
   	
  </div> 	
 
-  <div class="span4">
+  <div class="span3">
   	<div class="signupparent">
       <div class="signupparentchild">
 
