--- a/app/views/static_pages/extraviewcode.html.erb
+++ b/app/views/static_pages/extraviewcode.html.erb
@@ -4,7 +4,7 @@
     <div class="childLanding">
       <br>
       <br>   
-        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-lowercase-white.png" />
+        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png" />
         <br>
         <br>
    
@@ -14,22 +14,15 @@
      <div class="">
         <h4 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h4>
         <br>
-  <br>
     </div>
   
   </div>
 </div>
 <div class="row">
 
-  <div class="span1">
-    <div class="signupparent">
-      <div class="signupparentchild">
 
-      </div>
-    </div>
-  </div>
-
-  <div class="span6">
+<div class="moveleft">
+  <div class="span5 offset2">
     <div class="signupparent">
       <div class="signupparentchild">
           
@@ -38,35 +31,29 @@
     <h4 class="text-left">
 
     <div class="clearfix content-heading explainergraphics">
-      <h1 class="pull-left">1</h1>
-          <img class="pull-left pushpicturedown" src=""/>
+          <img class="pull-left pushpicturedown" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/White/AS(1REV).png"/>
           <h4 class="getridofspaceatbottom pulltextup">Tell us what advice you need.</h4>
           <small class="changesmallfont">You tell us what type of advice you're looking for.</small>
         </div>
-        <div class="clearfix content-heading explainergraphics">
-          <h1 class="pull-left">2</h1>
-          <img class="pull-left pushpicturedown" src=""/>
+        <div class="clearfix content-heading explainergraphics space2and3">
+          <h1 class="pull-left withrightmargin pushpicturedown">2</h1>
+            <img class="pull-left pushpicturedown" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/White/AS(2REV).png"/>
           <h4 class="getridofspaceatbottom">We'll connect you. / We'll provide advice.</h4>
           <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
         </div>
         <div class="clearfix content-heading explainergraphics">
-          <h1 class="pull-left">3</h1>
-          <img class="pull-left pushpicturedown" src=""/>
+          <h1 class="pull-left withrightmargin pushpicturedown">3</h1>
+          <img class="pull-left pushpicturedown" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/White/AS(4REV).png"/>
           <h4 class="getridofspaceatbottom">Save Time. Avoid the hassle.</h4>
-          <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.
-      
-          </small>
-
+          <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.</small>
         </div>
-
-    </h4>
 
       </div>
     </div>
 
   </div>
     
-    
+ </div>   
 
   <div class="span4">
     <div class="signupparent">
