--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -15,10 +15,10 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-44679032-1', 'adviceshare.co');
+  ga('create', 'UA-44679032-2', 'murmuring-falls-9918.herokuapp.com');
   ga('send', 'pageview');
 
-</script>  
+</script> 
   </head>
   <body>
     <div class="container">
