--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -16,7 +16,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-44679032-2', 'murmuring-falls-9918.herokuapp.com');
+  ga('create', 'UA-44679032-1', 'adviceshare.co');
   ga('send', 'pageview');
 
 </script>
