--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -37,7 +37,7 @@
       	</div>
       	<div class="clearfix content-heading explainergraphics space2and3">
           	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(2).png"/>
-          <h4 class="getridofspaceatbottom">We'll connect you. / We'll provide advice.</h4>
+          <h4 class="getridofspaceatbottom">We'll provide advice.</h4>
           <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics">
@@ -64,7 +64,8 @@
 		    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
 		    <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
 		      <%= f.button :submit, 'Sign Up for Early Access', :class=> "btn btn-large btn-primary" %>
-		  <% end %>  
+		  <% end %> 
+      <%= render 'signups/becomementor' %> 
 
       </div>
     </div>
