Update landing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,7 +17,8 @@ $grayMediumLight: #eaeaea;
 html,body {
   background-color: #EDEDED;
   background-image: url('https://s3.amazonaws.com/AdviceShare/AS+Background+Image');
-    background-size: cover;
+   /* background-image: url('http://unsplash.s3.amazonaws.com/batch%204/jet-sky.jpg'); */
+  background-size: cover;
   background-attachment: fixed;    
 }
 
@@ -84,7 +85,7 @@ html,body {
       }
 
       .childLanding img {
-          width:40%;
+          width:45%;
       }
 
       .withrightmargin{
@@ -171,12 +172,6 @@ html,body {
 .withleftmargin {
   margin-left: 50px;
 }
-
-
-
-
-
-
 
 
 /* AdviceAreas */
