--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -7,15 +7,15 @@
         <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png" />
         <br>
         <br>
-   
-        <h2 class="text-center">An easier way to get the advice you're looking for.</h2>
         <br>
+        <h4 class="text-center">AdviceShare makes it easier for people seeking professional and academic advice to connect<br> with those who want to help, and vice versa.</h4>
    
-     <div class="">
-        <h4 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h4>
+        <!--<h2 class="text-center">An easier way to get the advice you're looking for.</h2> -->
+     <!--<div class="span10">
+        <h4 class="text-center">AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa.</h4>
         <br>
-   	</div>
-	
+   	</div>-->
+	     <br>
 	</div>
 </div>
 <div class="row">
@@ -33,11 +33,11 @@
 		<div class="clearfix content-heading explainergraphics">
           <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png"/>
           <h4 class="getridofspaceatbottom pulltextup">Tell us what advice you need.</h4>
-          <small class="changesmallfont">You tell us what type of advice you're looking for.</small>
+          <small class="changesmallfont">You tell us what type of advice you're looking for.<br><br></small>
       	</div>
       	<div class="clearfix content-heading explainergraphics space2and3">
-          	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(2).png"/>
-          <h4 class="getridofspaceatbottom">We'll provide advice.</h4>
+          	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(4).png"/>
+          <h4 class="getridofspaceatbottom">We'll connect you.</h4>
           <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics">
@@ -83,8 +83,6 @@
 
 <div class="buttonLanding">
     <div class="childLanding">
-        <br>
-        <br>
         <br>
         <br>
         <small>© 2013 AdviceShare. All rights reserved.</small>
