--- a/app/views/signups/_becomementor.html.erb
+++ b/app/views/signups/_becomementor.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Interested in sharing advice? Become a mentor!", new_mentor_path, class: '' %>
+<%= link_to "Interested in sharing advice? Become a mentor!", new_mentor_path, class: 'headerlinks' %>
