Add Facebook share

--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+
     <!-- Google Analytics Content Experiment code -->
 <script>function utmx_section(){}function utmx(){}(function(){var
 k='77505939-0',d=document,l=d.location,c=d.cookie;
@@ -16,6 +16,10 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
 </script><script>utmx('url','A/B');</script>
 <!-- End of Google Analytics Content Experiment code -->
+
+<meta property="og:title" content="AdviceShare" />
+<meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
+<meta property="og:image" content="AS_Favicon.png" />
 
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag "application", media: "all",
