--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -8,7 +8,13 @@
         <br>
         <br>
         <br>
-        <h1 class="text-center">Thank you! <br><br> 
+        <br>
+        <br>
+        <h1 class="text-center">Thank you! 
+        <br>
+        <br>
+        <br>
+        <br> 
             We'll email you when access becomes available!</h1>
         <br>
     </div>
