--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -81,6 +81,17 @@
   
 </div>
 
+<a href="www.AdviceShare.co" 
+  onclick="
+    window.open(
+      'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 
+      'facebook-share-dialog', 
+      'width=626,height=436'); 
+    return false;">
+  Share on Facebook
+</a>
+
+
 <div class="buttonLanding">
     <div class="childLanding">
         <br>
