--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -19,7 +19,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 <meta property="og:title" content="AdviceShare" />
 <meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
-<meta property="og:image" content="AS_Favicon.png" />
+<meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicon.png" />
 
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag "application", media: "all",
