Update Signup views

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,7 +124,7 @@ html,body {
       } 
 
         .pushpicturedown {
-          margin-top: 5px;
+          margin-top: 12px;
         }
 
         .pushpicturedownmore {
@@ -135,8 +135,15 @@ html,body {
           margin-bottom: 13px;
         }
 
-/* Pricing Page */
+/* Social media */
 
+
+.socialmedia img {
+          width:4%;
+      }
+
+
+/* Pricing Page */
 .pricingparent {
     display:table;
     border:2px solid gray;
