--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -18,6 +18,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 <!-- End of Google Analytics Content Experiment code -->
 
 <meta property="og:title" content="AdviceShare" />
+<meta property="og:url" content="www.AdviceShare.co" />
 <meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
 <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicon.png" />
 
