--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -32,18 +32,18 @@
 
 		<div class="clearfix content-heading explainergraphics">
           <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png"/>
-          <h4 class="getridofspaceatbottom pulltextup">Tell us what advice you need.</h4>
-          <small class="changesmallfont">You tell us what type of advice you're looking for.<br><br></small>
+          <h4 class="getridofspaceatbottom pulltextup">Your Profile.</h4>
+          <small class="changesmallfont">Build a profile and tell us what type of advice you're looking for.<br><br></small>
       	</div>
       	<div class="clearfix content-heading explainergraphics space2and3">
           	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(4).png"/>
           <h4 class="getridofspaceatbottom">We'll connect you.</h4>
-          <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
+          <small class="changesmallfont">We'll find an AdviceShare mentor who wants to offer advice.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics">
           <img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(3).png"/>
           <h4 class="getridofspaceatbottom">Save Time. Avoid the hassle.</h4>
-          <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.</small>
+          <small class="changesmallfont">You'll get the advice you need, without the hassle of looking for it!</small>
       	</div>
 
       </div>
@@ -80,17 +80,6 @@
   </div>
   
 </div>
-
-<a href="www.AdviceShare.co" 
-  onclick="
-    window.open(
-      'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 
-      'facebook-share-dialog', 
-      'width=626,height=436'); 
-    return false;">
-  Share on Facebook
-</a>
-
 
 <div class="buttonLanding">
     <div class="childLanding">
