--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -14,8 +14,30 @@
         <br>
         <br>
         <br>
-        <br> 
-            We'll email you when access becomes available!</h1>
+        <h3>We'll email you when access becomes available! <br> Please share on Facebook and Twitter!</h3>
+        <br>
+        <br>
+        <br>   
+        </h1>
+
+
+<!--Facebook Script -->
+<div class="headerlinks" style="margin-left: -7px;">
+<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AS_Favicon.png&p[title]=AdviceShare&p[summary]=I%20just%20signed%20up%20for%20AdviceShare,%20an%20easier%20way%20for%20peoplaae%20seeking%20professional%20and%20academic%20advice%20to%20connect%20with%20those%20who%20want%20to%20help,%20and%20vice%20versa.">
+    <div class="socialmedia">
+    <img src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/FB-f-Logo__blue_100.png" />
+    <br>
+    <br>
+    </div>
+</a>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up for an easier way to help others with @AdviceShare!" data-size="large" data-count="none" data-hashtags="GetAhead">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</div>
+
+
+
         <br>
     </div>
 </div>
