--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -4,8 +4,7 @@
     <div class="childLanding">
     	
         <%= render 'signups/whiteASLogo' %>
-        <h3 class="text-center">Thank you for your interest in becoming an AdviceShare mentor!</h3>
-        <h4 class="text-center">Share some details with us below</h4>
+        <h4 class="text-center">Thank you for your interest in becoming an AdviceShare mentor.<br>Share some details with us below!</h4>
         <br>
 	
 	</div>
@@ -23,16 +22,16 @@
 
 		<div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom pulltextup">No Commitment</h4>
-          <small class="changesmallfont">You tell us what type of advice you're looking for.<br></br></small>
+          <small class="changesmallfont">We know your busy, and your schedule is unpredictable. So we'll only ask you to help whenever you're available.<br></br></small>
       	</div>
       	<div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom">Your preferences</h4>
-          <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.<br><br></small>
+          <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater with GPAs at a certain level? We'll take note and do our best to make it happen.<br><br></small>
 
       	</div>
       	<div class="clearfix content-heading explainergraphics withleftmargin">
-          <h4 class="getridofspaceatbottom">Your personal scheduler</h4>
-          <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.<br><br></small>
+          <h4 class="getridofspaceatbottom">Your own personal assistant</h4>
+          <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time that works to chat.<br><br></small>
       	</div>
 
       </div>
