Update AdviceShare Logo

--- a/app/views/earlysignups/new.html.erb
+++ b/app/views/earlysignups/new.html.erb
@@ -4,7 +4,7 @@
     <div class="childLanding">
     	<br>
     	<br>   
-        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png" />
+        <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
    
