--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -21,17 +21,17 @@
 		<h4 class="text-left">
 
 		<div class="clearfix content-heading explainergraphics withleftmargin">
-          <h4 class="getridofspaceatbottom pulltextup">No Commitment</h4>
+          <h4 class="getridofspaceatbottom pulltextup">No regular commitment.</h4>
           <small class="changesmallfont">We know your busy, and your schedule is unpredictable. So we'll only ask you to help whenever you're available.<br></br></small>
       	</div>
       	<div class="clearfix content-heading explainergraphics withleftmargin">
-          <h4 class="getridofspaceatbottom">Your preferences</h4>
+          <h4 class="getridofspaceatbottom">Your preferences.</h4>
           <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater with GPAs at a certain level? We'll take note and do our best to make it happen.<br><br></small>
 
       	</div>
       	<div class="clearfix content-heading explainergraphics withleftmargin">
-          <h4 class="getridofspaceatbottom">Your own personal assistant</h4>
-          <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time that works to chat.<br><br></small>
+          <h4 class="getridofspaceatbottom">Your own personal assistant.</h4>
+          <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time to chat.<br><br></small>
       	</div>
 
       </div>
