--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -4,7 +4,7 @@
     <div class="childLanding">
         <br>
         <br>   
-        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png" />
+        <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
         <br>
@@ -31,7 +31,7 @@
     </div>
 </a>
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up for an easier way to help others with @AdviceShare!" data-size="large" data-count="none" data-hashtags="GetAhead">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up for @AdviceShare, an easier way for people seeking professional/academic advice to connect w/ those who want to help, and vice versa!" data-size="large" data-count="none" data-hashtags="GetAhead">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </div>
