--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -4,7 +4,7 @@
     <div class="childLanding">
     	<br>
     	<br>   
-        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+full+white+logo+bigger.png" />
+        <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
         <br>
@@ -32,8 +32,8 @@
 
 		<div class="clearfix content-heading explainergraphics">
           <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png"/>
-          <h4 class="getridofspaceatbottom pulltextup">Your Profile.</h4>
-          <small class="changesmallfont">Build a profile and tell us what type of advice you're looking for.<br><br></small>
+          <h4 class="getridofspaceatbottom pulltextup">Make a request.</h4>
+          <small class="changesmallfont">Create a profile and tell us what type of advice you're looking for.<br><br></small>
       	</div>
       	<div class="clearfix content-heading explainergraphics space2and3">
           	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(4).png"/>
